--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,6 @@
 steps:
   - name: golang:1.16
+    entrypoint: /bin/bash
     args:
       - echo "Testing using VET"
       - go env -w GO111MODULE=off
