--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,4 @@
 steps:
   - name: golang:1.16
-    entrypoint: /bin/bash
-    args:
-      - go env -w GO111MODULE=off
-      - go vet
+    env: ['GO111MODULE=off']
+    args: ['go', 'vet', './...']
