substitution for date variable.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build',
            '--file', 'Dockerfile',
-           '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:$BRANCH_NAME-$(date +%d-%m-%Y)-$SHORT_SHA', '.']
+           '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:$BRANCH_NAME-${_DATE}-$SHORT_SHA', '.']
