--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,4 +9,4 @@ steps:
     entrypoint: sh
     args:
       - '-c'
-      - 'docker build --file=Dockerfile -t us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:$BRANCH_NAME-$(date +$%F)-$SHORT_SHA .'
+      - 'docker build --file Dockerfile --tag us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:$BRANCH_NAME-$(date +%d-%m-%Y)-$SHORT_SHA .'
