--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,7 @@ steps:
     args:
       - '-c'
       - |  
-        if [[ "$BRANCH_NAME" == "main" || "$BRANCH_NAME" == "dev" && -z $TAG_NAME ]] 
+        if [[ "$BRANCH_NAME" == "main" || "$BRANCH_NAME" == "dev" && -z "$TAG_NAME" ]] 
         then
           dateOfImage=$(date '+%d-%m-%Y')
           tag=":$BRANCH_NAME-${dateOfImage}-$SHORT_SHA"
