--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,8 +5,8 @@ steps:
     args: ['go', 'vet', './...']
 
       #Docker build
-  - name: 'ubuntu'
-    entrypoint: bash
+  - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: sh
     args:
       - '-c'
       - |  
@@ -19,4 +19,4 @@ steps:
           tag=":$TAG_NAME"
           echo "Running on branch '$BRANCH_NAME': tag = $tag"
         fi
-#      - 'docker build --file Dockerfile --tag us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:${tag} .'
+        docker build --file Dockerfile --tag us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:${tag} .
