--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -19,4 +19,4 @@ steps:
           tag=":$TAG_NAME"
           echo "Running on branch '$BRANCH_NAME': tag = $tag"
         fi
-        docker build --file Dockerfile --tag us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app:${tag} .
+        docker build --file Dockerfile --tag us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app${tag} .
