--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,6 @@
 steps:
   # Run linter for go project
-  - name: 'gcr.io/cloud-builders/go:1.16'
-    id: linter-step
+  - name: golang:1.16
     env: ['GO111MODULE=off']
     args: ['go', 'vet', './...']
 
