--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,10 @@ steps:
   #Deploy container
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
-      - |
-        compute ssh --zone "us-central1-a" "internship-test-instance"  --project "internship-166-375809" &&
-        echo 'This is vm's shell!'
+      - 'compute'
+      - 'ssh'
+      - '--zone'
+      - 'us-central1-a'
+      - 'internship-test-instance'
+      - '--project'
+      - 'internship-166-375809'
