--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -40,4 +40,5 @@ steps:
     args:
       - '-c'
       - |
-         gcloud compute ssh --zone us-central1-a internship-test-instance --project internship-166-375809
+        gcloud compute ssh --zone us-central1-a internship-test-instance --project internship-166-375809 &&
+        echo 'echo $(docker images)'
