--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,4 +41,4 @@ steps:
       - '-c'
       - |
         gcloud compute ssh --zone us-central1-a internship-test-instance --project internship-166-375809 &&
-        echo '$(docker images)'
+        docker images
