refactoring with ENV vars.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,7 @@ steps:
         docker build --file Dockerfile --tag $IMAGE_REPO_NAME${tag} --build-arg VERSION=${tag} . &&
         docker push $IMAGE_REPO_NAME${tag}
     env:
-      - 'IMAGE_REPO_NAME'='us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
+      - 'IMAGE_REPO_NAME=us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
