refactoring with ENV vars.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,10 +31,10 @@ steps:
       - '-c'
       - |
         tag=$(cat /image_info_volume/file)
-        docker build --file Dockerfile --tag $IMAGE_REPO_NAME${tag} --build-arg VERSION=${tag} . &&
-        docker push $IMAGE_REPO_NAME${tag}
-    env:
-      - 'IMAGE_REPO_NAME=us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
+        docker build --file Dockerfile --tag ${_IMAGE_REPO_NAME}${tag} --build-arg VERSION=${tag} . &&
+        docker push ${_IMAGE_REPO_NAME}${tag}
+    substitutions:
+      - _IMAGE_REPO_NAME: 'us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
