refactoring with substitutions.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,8 +33,6 @@ steps:
         tag=$(cat /image_info_volume/file)
         docker build --file Dockerfile --tag ${_IMAGE_REPO_NAME}${tag} --build-arg VERSION=${tag} . &&
         docker push ${_IMAGE_REPO_NAME}${tag}
-    substitutions:
-      - _IMAGE_REPO_NAME: 'us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
@@ -52,3 +50,6 @@ steps:
     volumes:
       - name: tag-info
         path: '/image_info_volume'
+
+substitutions:
+  _IMAGE_REPO_NAME: 'us-central1-docker.pkg.dev/$PROJECT_ID/internship-repo/test-go-app'
