--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -45,11 +45,13 @@ steps:
       - |
         tag=$(cat /image_info_volume/file)
         gcloud compute ssh --zone us-central1-a internship-test-instance --project $PROJECT_ID --command "docker system prune -f -a;
-        docker stop test-go-app;
-        docker run --rm -d -p 8000:8000 --name=test-go-app '${_IMAGE_REPO_NAME}${tag}'"
+        docker stop ${_CONTAINER_NAME};
+        docker run --rm -d -p ${_CONTAINER_PORT}:${_CONTAINER_PORT} --name=${_CONTAINER_NAME} '${_IMAGE_REPO_NAME}${tag}'"
     volumes:
       - name: tag-info
         path: '/image_info_volume'
 
 substitutions:
+  _CONTAINER_PORT: '8000'
+  _CONTAINER_NAME: 'test-go-app'
   _IMAGE_REPO_NAME: 'us-central1-docker.pkg.dev/${PROJECT_ID}/internship-repo/test-go-app'
