--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,7 +44,7 @@ steps:
       - '-c'
       - |
         tag=$(cat /image_info_volume/file)
-        gcloud compute ssh --zone us-central1-a internship-test-instance --project $PROJECT_ID --command "docker system prune -f -a;
+        gcloud compute ssh --zone ${_VM_ZONE_NAME} ${_VM_INSTANCE_NAME} --project $PROJECT_ID --command "docker system prune -f -a;
         docker stop ${_CONTAINER_NAME};
         docker run --rm -d -p ${_CONTAINER_PORT}:${_CONTAINER_PORT} --name=${_CONTAINER_NAME} '${_IMAGE_REPO_NAME}${tag}'"
     volumes:
@@ -52,6 +52,8 @@ steps:
         path: '/image_info_volume'
 
 substitutions:
+  _VM_ZONE_NAME: 'us-central1-a'
+  _VM_INSTANCE_NAME: 'internship-test-instance'
   _CONTAINER_PORT: '8000'
   _CONTAINER_NAME: 'test-go-app'
   _IMAGE_REPO_NAME: 'us-central1-docker.pkg.dev/${PROJECT_ID}/internship-repo/test-go-app'
