--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -56,7 +56,7 @@ steps:
     args:
       - run
       - --filename='/kubernetes/deployment.yaml'
-      - --image='${_IMAGE_REPO_NAME}${tag}'
+      - --image='${_IMAGE_REPO_NAME}$(cat /image_info_volume/file)'
       - --location='${_VM_ZONE_NAME}'
       - --cluster='${_CLUSTER_NAME}'
     volumes:
