--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -58,7 +58,7 @@ steps:
       - '-c'
       - |
         tag=$(cat /image_info_volume/file)
-        gke-deploy run -f 'deployment.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app -v ${tag} -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
+        gke-deploy run -f 'deployment.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
     volumes:
       - name: tag-info
         path: '/image_info_volume'
