--- a/service-main.yaml
+++ b/service-main.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-service
+  name: app-service-main
 spec:
   type: LoadBalancer
   selector:
-    app.kubernetes.io/name: test-go-app
+    app.kubernetes.io/name: test-go-app-main
   ports:
     - protocol: TCP
       port: 8080
