--- a/service-dev.yaml
+++ b/service-dev.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: app-service-dev
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app.kubernetes.io/name: test-go-app-dev
   ports:
