--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,19 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test-ingress
+  name: minimal-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
+  ingressClassName: nginx
   rules:
-    - http:
+    - host: demo.localdev.me
+      http:
         paths:
-          - path: /dev/hello
+          - path: /dev(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: app-service-dev
                 port:
                   number: 8080
-          - path: /main/hello
+    - host: demo.localdev.me
+      http:
+        paths:
+          - path: /main(/|$)(.*)
             pathType: Prefix
             backend:
               service:
