--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -60,10 +60,14 @@ steps:
         tag=$(cat /image_info_volume/file)
         gke-deploy run -f 'deployment-$BRANCH_NAME.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-$BRANCH_NAME -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
         gke-deploy run -f 'service-$BRANCH_NAME.yaml'
-        gke-deploy run -f 'ingress.yaml' -o expanded
     volumes:
       - name: tag-info
         path: '/image_info_volume'
+
+  - name: 'gcr.io/cloud-builders/gke-deploy'
+    entrypoint: /bin/bash
+    args:
+      - gke-deploy apply -f 'ingress.yaml'
 
 substitutions:
   _VM_ZONE_NAME: 'europe-west6-b'
