--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -67,7 +67,7 @@ steps:
   - name: 'gcr.io/cloud-builders/gke-deploy'
     entrypoint: /bin/bash
     args:
-      - gke-deploy apply -f 'ingress.yaml'
+      - gke-deploy run -f 'ingress.yaml'
 
 substitutions:
   _VM_ZONE_NAME: 'europe-west6-b'
