--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -69,6 +69,7 @@ steps:
     args:
       - '-c'
       - |
+        kubectl apply -f 'https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml'
         kubectl apply -f 'ingress.yaml'
 
 
