--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -70,6 +70,10 @@ steps:
       - '-c'
       - |
         kubectl apply -f 'https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml'
+        kubectl wait --namespace ingress-nginx \
+        --for=condition=ready pod \
+        --selector=app.kubernetes.io/component=controller \
+        --timeout=120s
         kubectl apply -f 'ingress.yaml'
 
 
