--- a/ingress-main.yaml
+++ b/ingress-main.yaml
@@ -1,22 +1,12 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: path-based-ingress
+  name: main-path-based-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
-    - host: demo.localdev.me
-      http:
-        paths:
-          - path: /dev(/|$)(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: app-service-dev
-                port:
-                  number: 8080
     - host: demo.localdev.me
       http:
         paths:
