--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -69,6 +69,9 @@ steps:
     args:
       - '-c'
       - |
+        kubectl create clusterrolebinding cluster-admin-binding \
+        --clusterrole cluster-admin \
+        --user $(gcloud config get-value account)
         kubectl apply -f 'https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.5.1/deploy/static/provider/cloud/deploy.yaml'
         kubectl wait --namespace ingress-nginx \
         --for=condition=ready pod \
