--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -58,8 +58,8 @@ steps:
       - '-c'
       - |
         tag=$(cat /image_info_volume/file)
-        gke-deploy run -f './app-deployment/deployment-$BRANCH_NAME.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-$BRANCH_NAME -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
-        gke-deploy run -f './app-deployment/service-$BRANCH_NAME.yaml'
+        gke-deploy run -f '${_APP_DEPLOYMENT_DIR}/deployment-$BRANCH_NAME.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-$BRANCH_NAME -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
+        gke-deploy run -f '$_APP_DEPLOYMENT_DIR/service-$BRANCH_NAME.yaml'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
@@ -80,6 +80,7 @@ steps:
         kubectl apply -f 'ingress-$BRANCH_NAME.yaml'
 
 substitutions:
+  _APP_DEPLOYMENT_DIR: './app-deployment'
   _VM_ZONE_NAME: 'europe-west6-b'
   _VM_INSTANCE_NAME: 'terraform-instance'
   _CLUSTER_NAME: 'internship-166-375809-prod-gke'
