--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,7 +31,7 @@ steps:
       - '-c'
       - |
         tag=$(cat /image_info_volume/file)
-        docker build --file './docker/Dockerfile' --tag ${_IMAGE_REPO_NAME}${tag} --build-arg VERSION=${tag} . &&
+        docker build --file Dockerfile --tag ${_IMAGE_REPO_NAME}${tag} --build-arg VERSION=${tag} . &&
         docker push ${_IMAGE_REPO_NAME}${tag}
     volumes:
       - name: tag-info
