--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -62,10 +62,10 @@ steps:
         if [[ "$tag" =~ ^[0-9]+.[0-9]+.[0-9]+ ]]; then
           $branch=main
         else
-          echo 'Skipping tag resolving, the tag is $tag, the branch is $branch' 
+          echo 'Skipping tag resolving, the tag is '$tag', the branch is '$branch'' 
         fi
-        gke-deploy run -f '${_APP_DEPLOYMENT_DIR}/deployment-$branch.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-$branch -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
-        gke-deploy run -f '$_APP_DEPLOYMENT_DIR/service-$branch.yaml'
+        gke-deploy run -f '${_APP_DEPLOYMENT_DIR}/deployment-${branch}.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-${branch} -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
+        gke-deploy run -f '$_APP_DEPLOYMENT_DIR/service-${branch}.yaml'
     volumes:
       - name: tag-info
         path: '/image_info_volume'
@@ -79,7 +79,7 @@ steps:
         if [[ "$tag" =~ ^[0-9]+.[0-9]+.[0-9]+ ]]; then
           $branch=main
         else
-          echo 'Skipping tag resolving, the tag is $tag, the branch is $branch' 
+          echo 'Skipping tag resolving, the tag is '$tag', the branch is '$branch'' 
         fi
         kubectl create clusterrolebinding cluster-admin-binding \
         --clusterrole cluster-admin \
@@ -89,7 +89,7 @@ steps:
         --for=condition=ready pod \
         --selector=app.kubernetes.io/component=controller \
         --timeout=120s
-        kubectl apply -f '${_INFRA_DEPLOYMENT_DIR}/ingress-$branch.yaml'
+        kubectl apply -f '${_INFRA_DEPLOYMENT_DIR}/ingress-${branch}.yaml'
 
 substitutions:
   _APP_DEPLOYMENT_DIR: './app-deployment'
