--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -62,7 +62,7 @@ steps:
         if [[ "$tag" =~ ^[0-9]+.[0-9]+.[0-9]+ ]]; then
           branch=main
         else
-          echo 'Skipping tag resolving, the tag is '$tag', the branch is '$branch' 
+          echo 'Skipping tag resolving, the tag is '$tag', the branch is '$branch'' 
         fi
         gke-deploy run -f '${_APP_DEPLOYMENT_DIR}/deployment-${branch}.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-${branch} -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
         gke-deploy run -f '$_APP_DEPLOYMENT_DIR/service-${branch}.yaml'
