--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -57,6 +57,7 @@ steps:
     args:
       - '-c'
       - |
+        tag=$(cat /image_info_volume/file)
         gke-deploy run -f '${_APP_DEPLOYMENT_DIR}/deployment-$BRANCH_NAME.yaml' -i ${_IMAGE_REPO_NAME}${tag} -a test-go-app-$BRANCH_NAME -v 1.0.0 -o expanded -c ${_CLUSTER_NAME} -l ${_VM_ZONE_NAME}
         gke-deploy run -f '$_APP_DEPLOYMENT_DIR/service-$BRANCH_NAME.yaml'
     volumes:
