change for helm command.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -44,6 +44,7 @@ steps:
       - '-c'
       - |
       - tag=$(cat /image_info_volume/file)
+      - echo 'Using tag - '$tag''
       - helm upgrade -i my-go-app-test chart/ --set container.image=us-central1-docker.pkg.dev/internship-166-375809/internship-repo/test-go-app${tag}
 #      - 'install'
 #      - 'my-go-app-test'
