change for helm command.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,9 +41,7 @@ steps:
   - name: 'gcr.io/$PROJECT_ID/helm'
 #    entrypoint: /bin/bash
     args:
-      - upgrade
-#      - tag=$(cat /image_info_volume/file)
-#      - helm upgrade -i my-go-app-test chart/ --set container.image=us-central1-docker.pkg.dev/internship-166-375809/internship-repo/test-go-app${tag}
+      - 'upgrade'
       - 'install'
       - 'my-go-app-test'
       - 'chart/'
