change for helm command.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,7 +42,7 @@ steps:
 #    entrypoint: /bin/bash
     args:
       - 'upgrade'
-      - 'install'
+      - '--install'
       - 'my-go-app-test'
       - 'chart/'
       - '--set container.image=us-central1-docker.pkg.dev/internship-166-375809/internship-repo/test-go-app'$(cat /image_info_volume/file)
