--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,7 +42,7 @@ steps:
     entrypoint: 'helm'
     args:
       - |
-      - upgrade -i my-go-app-test chart/ --set replicaCount=2
+        upgrade -i my-go-app-test chart/ --set replicaCount=2
 #      - '--set container.image=us-central1-docker.pkg.dev/internship-166-375809/internship-repo/test-go-app'$(cat /image_info_volume/file)
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=europe-west6-b'
